# polars-holidays

./: Cargo.toml  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: publish_to_pypi.yml
polars_holidays/: __init__.py
src/: expressions.rs
src/countries/: by_holidays.rs  constants.rs  kz_holidays.rs  me_holidays.rs  mod.rs  pl_holidays.rs  sv_holidays.rs  ua_holidays.rs
tests/: test.py  test_pig_latinnify.py
